--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,38 +1,92 @@
-$body-bckg-color: #f9f9f9;
-
+$body-bckg-color: #fffff9;
+$main-nav-color: #aaa000;
 /** Force App wrapper to bounds */
 [data-reactroot] {
-	width: 100vw !important;
-	height: 100vh !important;
-	position: relative;
+  width: 100vw !important;
+  height: 100vh !important;
+  position: relative;
 }
+
 /** Reset Defaults **/
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	width: 100% !important;
-	height: 100% !important;
-	background-color: $body-bckg-color;
-	color: #7f8080;
-	font-family: Montserrat,sans-serif,-apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	text-align: center;
+  width: 100% !important;
+  height: 100% !important;
+  background-color: $body-bckg-color;
+  color: #010601;
+  font-family: Montserrat, sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
 
 
 }
 
-.active{
-	color: #010601;
-	background-color: rgba(170, 160, 0, 0.91);
+
+//main nav in commonData component
+
+nav {
+  overflow: hidden;
+  background-color: #333;
+  position: fixed;
+  top: 0;
+  width: 100%;
+
+  ul {
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 15px;
+
+  }
+}
+
+.mainNav {
+  display: inline;
+  font-family: "Fira Sans", sans-serif;
+  font-size: 17px;
+
+  color: #f2f2f2;
+  text-decoration: none;
+  padding: 14px;
+
+  &:hover {
+    background-color: #111;
+  }
+
+}
+
+//form
+.formWrapper {
+  margin-top: 100px;
+}
+
+//btn in form zapisz
+
+.active {
+  color: #010601;
+  background-color: #fdca27;
 }
 
 .notActive {
-	color: #010601;
-	background-color: rgba(1, 6, 1, 0.32);
+  color: #fffff9;
+  background-color: rgba(1, 6, 1, 0.8);
 }
 
+
+//table of inputs 3 form
+.description {
+
+  background-color: rgba(1, 6, 1, 0.8);
+  color: white;
+}
+
+//styl dla list
+.mainTable{
+	margin-top: 100px;
+}
