--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -16,9 +16,7 @@ $main-nav-color: #aaa000;
   box-sizing: border-box;
 }
 @mixin btn{
-  width:100px;
-  height: 25px;
-  border-radius: 8px;
+color:white;
 }
 
 body {
@@ -143,8 +141,12 @@ width:70%;
   }
 }
 
-
+//btngrpup
+.btnGroup{
+  margin-top:50px;
+}
 //popup
+
 .mainDashboard{
   position: relative;
 }
