clients data and myInvoiceData form had been updated

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -159,4 +159,9 @@ width:70%;
   top:10vh;
   left:30vw;
 }
-
+.invoiceHeader{
+  font-weight: bold;
+}
+.underlineText{
+  border-top: 1px solid black;
+}
