grid for commonData added

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -212,3 +212,15 @@ width:70%;
   left:35vw;
 
 }
+
+
+//columny form main
+.colStyle{
+  text-align: right;
+  font-weight: bold;
+  color: #156b0e;
+}
+
+.mainFormInput{
+  text-align:left;
+}
