--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,3 @@
-
-
 $body-bckg-color: #fffff9;
 $main-nav-color: #aaa000;
 /** Force App wrapper to bounds */
@@ -15,10 +13,12 @@ $main-nav-color: #aaa000;
   padding: 0;
   box-sizing: border-box;
 }
-@mixin btn{
-color:white;
+
+@mixin btn {
+  color: white;
 }
-@mixin popup{
+
+@mixin popup {
   background-color: white;
   border: 1px solid darkgreen;
   position: absolute;
@@ -66,9 +66,18 @@ nav {
   padding: 14px;
 
   &:hover {
-    background-color: #111;
+    color: white;
+    text-decoration: none;
+    background-color: rgba(124, 124, 124, 0.5)
   }
 
+}
+
+nav{
+  .active{
+    background-color:white;
+    color:black;
+  }
 }
 
 //form
@@ -85,12 +94,13 @@ nav {
 }
 
 
-.calc{
-@include btn;
+.calc {
+  @include btn;
   border: 1px solid darkgreen;
   background-color: darkolivegreen;
-  color:white;
+  color: white;
 }
+
 .notActive {
   @include btn;
   color: #fffff9;
@@ -113,8 +123,8 @@ nav {
 //ekran moje dane:
 .myInvoiceData {
   margin: 100px auto;
-  width:70%;
-  border:1px solid #1f1080;
+  width: 70%;
+  border: 1px solid #1f1080;
   border-radius: 10px;
 
   form {
@@ -123,11 +133,12 @@ nav {
     justify-content: center;
     margin-top: 50px;
 
-    .myInvoiceDataSubmit{
-      width:120px;
-      margin:50px auto;
-      button{
-        width:100%;
+    .myInvoiceDataSubmit {
+      width: 120px;
+      margin: 50px auto;
+
+      button {
+        width: 100%;
 
       }
     }
@@ -136,55 +147,59 @@ nav {
 }
 
 .myDataInput {
-width:70%;
-  margin:0 auto;
-  input{
-    float:right;
+  width: 70%;
+  margin: 0 auto;
+
+  input {
+    float: right;
   }
-  label{
+
+  label {
 
   }
 }
 
 //btngrpup
-.btnGroup{
-  margin-top:50px;
+.btnGroup {
+  margin-top: 50px;
 }
+
 //popup
 
-.mainDashboard{
+.mainDashboard {
   position: relative;
 }
+
 .popup {
   @include popup;
-  width:40vw;
+  width: 40vw;
   height: 80vh;
 
-  top:10vh;
-  left:30vw;
+  top: 10vh;
+  left: 30vw;
 }
 
-.popupBackground{
-  width:100%;
+.popupBackground {
+  width: 100%;
   height: 100%;
   background-color: rgba(21, 107, 14, 0.5);
 }
 
-@media (max-width: 1500px)  {
+@media (max-width: 1500px) {
 
-  .popup{
-    width:55vw;
+  .popup {
+    width: 55vw;
     //height: 70vh;
-    top:15vh;
-    left:22vw;
+    top: 15vh;
+    left: 22vw;
 
   }
 }
 
 @media (max-width: 1000px) {
 
-  .popup{
-    width:100vw;
+  .popup {
+    width: 100vw;
     height: 100vh;
 
 
@@ -192,35 +207,47 @@ width:70%;
 }
 
 
-
-.popup_inner{
+.popup_inner {
   margin-bottom: 50px;
 }
-.invoiceHeader{
+
+.invoiceHeader {
   font-weight: bold;
 }
-.underlineText{
+
+.underlineText {
   border-top: 1px solid black;
 }
 
-.addClientForm{
+.addClientForm {
   @include popup;
-  width:30vw;
+  width: 30vw;
   height: 40vh;
 
-  top:30vh;
-  left:35vw;
+  top: 30vh;
+  left: 35vw;
+
+}
+
+
+.addProductForm {
+  @include popup;
+  width: 30vw;
+  height: 40vh;
+
+  top: 30vh;
+  left: 35vw;
 
 }
 
 
 //columny form main
-.colStyle{
+.colStyle {
   text-align: right;
   font-weight: bold;
   color: #156b0e;
 }
 
-.mainFormInput{
-  text-align:left;
+.mainFormInput {
+  text-align: left;
 }
