style for components updated

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -81,9 +81,9 @@ nav{
 }
 
 //form
-.mainDashboard {
-  margin-top: 100px;
-}
+//.mainDashboard {
+//  margin-top: 200px;
+//}
 
 //btn in form zapisz
 
@@ -269,6 +269,11 @@ nav{
 }
 
 .addBtn{
+  //margin-top: 100px;
+  margin-bottom: 50px;
+}
+.addProductBtn{
+  margin-top: 100px;
   margin-bottom: 50px;
 }
 
