--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -156,6 +156,8 @@ nav{
 
 }
 
+
+
 .itemDescription{
   margin-top: 50px;
 }
@@ -265,6 +267,10 @@ nav{
 
   top: 30vh;
   left: 35vw;
+  h1{
+    margin-top: 50px;
+    margin-bottom:50px;
+  }
 
 }
 
